[gd_scene load_steps=7 format=3 uid="uid://rphtga3tthkd"]

[ext_resource type="Script" path="res://scripts/mushroom.gd" id="1_hki7r"]
[ext_resource type="Texture2D" uid="uid://b586jykoyckhl" path="res://assets/mushroom/Mushroom-Idle.png" id="2_hf3im"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jivaa"]
size = Vector2(21, 31)

[sub_resource type="Animation" id="Animation_y0iaq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_hf3im")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_6gpq8"]
resource_name = "idle"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_hf3im")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fgdnq"]
_data = {
"RESET": SubResource("Animation_y0iaq"),
"idle": SubResource("Animation_6gpq8")
}

[node name="mushroom" type="CharacterBody2D"]
script = ExtResource("1_hki7r")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(0, -32)
texture = ExtResource("2_hf3im")
hframes = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -15.5)
shape = SubResource("RectangleShape2D_jivaa")

[node name="down_raycast_1" type="RayCast2D" parent="."]
position = Vector2(-11, -15)
target_position = Vector2(0, 16)

[node name="down_raycast_2" type="RayCast2D" parent="."]
position = Vector2(10, -15)
target_position = Vector2(0, 16)

[node name="right_raycast_1" type="RayCast2D" parent="."]
position = Vector2(0, -31)
target_position = Vector2(14, 0)

[node name="right_raycast_2" type="RayCast2D" parent="."]
position = Vector2(0, -2)
target_position = Vector2(14, 0)

[node name="left_raycast_1" type="RayCast2D" parent="."]
position = Vector2(0, -31)
target_position = Vector2(-15, 0)

[node name="left_raycast_2" type="RayCast2D" parent="."]
position = Vector2(0, -2)
target_position = Vector2(-15, 0)

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_fgdnq")
}
autoplay = "idle"
